--- a/.stickler.yml
+++ b/.stickler.yml
@@ -4,10 +4,10 @@ linters:
     # indicate where is the config file for stylelint
     config: 'stylelint.config.js'
 
-files:
-    ignore:
-        - 'src/generated/*'
-        - 'webroot/bower_components/*'
+# files:
+#     ignore:
+#         - 'src/generated/*'
+#         - 'webroot/bower_components/*'
 # PLEASE DO NOT enable auto fixing options
 # if you need extra support from you linter - do it in your local env as described in README for this config
 
