--- a/.stickler.yml
+++ b/.stickler.yml
@@ -4,10 +4,12 @@ linters:
     # indicate where is the config file for stylelint
     config: 'stylelint.config.js'
 
-files:
+folder:
     ignore:
-        - 'src/generated/*'
-        - 'webroot/bower_components/*'
+       - 'images'  #For ignoring a file/folder
+      
+fixers:
+    enable: true   #This is the magic part of out fixing your errors
 # PLEASE DO NOT enable auto fixing options
 # if you need extra support from you linter - do it in your local env as described in README for this config
 
